# calvano-thesis

./: .gitignore  CITATION.cff  Dockerfile  LICENSE  Makefile  README.md  calvano_colab.ipynb  calvano_colab_backup.ipynb  config.yaml  make_mid.sh  make_minimal.sh  monitor_experiment.py  pyproject.toml  requirements.txt
myproject/: __init__.py  agent.py  env.py  grid.py  train.py
myproject/scripts/: __init__.py  table_a2_parallel.py
results/: table_a2_mid.csv  table_a2_mid.json  table_a2_test.csv  table_a2_test.json
scripts/: plot_figure2b.py  plot_figure2b_plotly.py  run_reproduction.py  run_reproduction_backup.py  table_a2.py  table_a2_parallel.py  table_a2_simple.py
src/: __init__.py  agent.py  config.py  env.py  grid.py  train.py
tests/: test_complete_implementation.py  test_integration.py  test_math.py
